--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ header h1 {
 
 main {
     display: flex;
-    gap: 40px;
     justify-content: space-between;
 }
 
@@ -55,10 +54,124 @@ main {
     width: fit-content;
 }
 
-.menu {
+.menu-lateral {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 10px;
     box-shadow: 5px 5px 20px RGBA(0, 0, 0, .1);
+}
+
+.menu-lateral input {
+    display: none;
+}
+
+.turno {
+    width: 150px;
+}
+
+.turno p {
+    color: var(--gunmetal);
+    font-size: 0.9rem;
+    font-weight: 500;
+    margin-bottom: 12px;
+}
+
+.turno label {
+    border: 1px solid var(--silver);
+    border-radius: 4px;
+    padding: 5px;
+    text-align: center;
+    justify-content: center;
+    margin: 2px;
+    cursor: pointer;
+}
+
+.turno label:hover {
+    background-color: var(--vermillion);
+}
+
+.turno div {
+    margin-top: 15px;
+    border: 1px solid var(--silver);
+}
+
+.ano-eleicao {
+    display: flex;
+    flex-direction: column;
+}
+
+.ano-eleicao p {
+    color: var(--gunmetal);
+    font-size: 0.9rem;
+    font-weight: 500;
+    margin-bottom: 8px;
+}
+
+.ano-eleicao label {
+    display: block;
+    color: var(--dark-blue);
+    font-size: 0.9rem;
+    margin-bottom: 5px;
+    cursor: pointer;
+}
+
+.ano-eleicao label:hover {
+    color: var(--vermillion);
 }
 
 .barra-resultado {
     box-shadow: 5px 5px 20px RGBA(0, 0, 0, .1);
+}
+
+.barra-resultado > p {
+    font-size: 1.3rem;
+    color: var(--dark-blue);
+    font-weight: 500;
+    margin: 10px 20px;
+}
+
+.candidato {
+    display: flex;
+    gap: 20px;
+    margin: 10px 20px;
+    padding: 10px;
+
+    border-top: 1px solid var(--gunmetal);
+}
+
+.candidato img {
+    width: 56px;
+    height: 56px;
+    border-radius: 999px;
+}
+
+.candidato div {
+    display: flex;
+    flex-direction: column;
+}
+
+.nome-partido {
+    display: flex;
+    justify-content: center;
+}
+
+.candidato div h2 {
+    font-size: 1rem;
+    justify-self: center;
+    margin-bottom: 5px;
+}
+
+.candidato div p {
+    font-size: 0.8rem;
+    margin-bottom: 5px;
+}
+
+.porcentagem {
+    margin: 0;
+    padding: 0;
+    height: 6px;
+    background-color: red;
+    border: 1px solid black;
+    border-radius: 16px;
 }
