Adicionada funcionalidade de mudar o background dos botoes turno e ano quando estao selecionados

--- a/style.css
+++ b/style.css
@@ -116,6 +116,10 @@ main {
     cursor: pointer;
 }
 
+.ano-eleicao input[type='radio']:checked + label::after {
+    background-color: green;
+}
+
 .ano-eleicao label:hover {
     color: var(--vermillion);
 }
